[package]
name = "rust_rss"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] } # Async runtime
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
reqwest = "0.11" # For fetching RSS feeds
rss = "2.0" # For parsing RSS feed data
tower-http = { version = "0.4", features = ["fs"] } # For serving static files
serde_json = "1.0.137"
scraper = "0.23.1"
tracing = "0.1"
tracing-subscriber = "0.3"
